--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@
         width: 0ch;
     }
     100% {
-        width: 23ch;
+        width: 26ch;
     }
 }
 header {
@@ -48,37 +48,41 @@ main {
     margin-bottom: 2%;
 }
 .project {
-    display: flex;
     margin-top: 5%;
 }
-.project img {
-    position: absolute;
-    margin-left: -21%;
-    margin-top: 5%;
-    
-}
-.project-info {
-    position: absolute;
-    width: 25%;
+.project {
     margin-top: 10%;
-    margin-left: 61%;
+    display: flex;
+    flex-direction: column;
 }
-.project-info p {
-    margin-bottom: 5%;
+.card {
+    margin-top: 10%;
+    display: flex;
+    justify-content: space-around;
 }
-.project-info a {
-    border-radius: 10px;
-    text-decoration: none;
-    background-color: #00BFFF;
-    padding: 5px;
-    color: black;
-    margin-right: 40%;
+.card-info {
+    width: 40%;
+}
+.link-card {
+    margin-top: 5%;
+    border:1px solid #25692A;
+    border-radius:4px;
+    display:inline-block;
+    cursor:pointer;
+    font-family:Verdana;
+    font-weight:bold;
+    font-size:13px;
+    padding:6px 10px;
+    text-decoration:none;
+}
+.card-1 {
+    display: flex;
 }
 .footer {
     display: flex;
     flex-direction: column;
     position: absolute;
-    margin-top: 65%;
+    margin-top: 10%;
     margin-left: 45%;
 }
 .footer img {
