--- a/css/style.css
+++ b/css/style.css
@@ -51,26 +51,10 @@
     display: inline-block;
     margin-left: 20%;
 }
+
 @media only screen and (min-width: 35rem) {
-.about h1 {
-    animation: type 3s;
-    overflow: hidden;
-    white-space: nowrap;
-}
-@keyframes type {
-    0% {
-        width: 0ch;
-    }
-    100% {
-        width: 26ch;
-    }
-}
-header {
-    background-color: aqua;
-    height: 5%;
-    padding: 1%;
-    display: flex;
-    justify-content: flex-end;
+body {
+    background-color: rgb(240, 240, 166);
 }
 main {
     padding: 0 5%;
@@ -79,35 +63,58 @@ main {
     display: flex;
 }
 .about img {
+    display: block;
     position: absolute;
-    margin-left: 30%;
+    margin-left: 35%;
+    margin-top: -2%;
 }
 .dev-info {
-    width: 30%;
-    margin-top: 6%;
+    width: 45%;
+    margin-top: 3%;
     text-align: justify;
 }
 .dev-info h1 {
+    animation: type 3s;
+    overflow: hidden;
+    white-space: nowrap;
+    width: 100%;
+    font-size: 35px;
+    font-family: 'Sansita Swashed', cursive;
     margin-bottom: 5%;
+    }
+@keyframes type {
+    0% {
+        width: 0ch;
+    }
+    100% {
+        width: 32ch;
+    }
+
+}
+}
+.dev-info p {
+    width: 70%;
+    justify-content: center;
+    font-size: 18px;
+    font-family: 'Rosario', sans-serif;
 }
 .dev-info h2 {
     margin-bottom: 2%;
+    font-family: 'Sora', sans-serif;
 }
 .project {
-    margin-top: 5%;
-}
-.project {
-    margin-top: 10%;
+    margin-top: 12%;
     display: flex;
     flex-direction: column;
 }
 .card {
-    margin-top: 10%;
     display: flex;
-    justify-content: space-around;
 }
 .card-info {
-    width: 40%;
+    width: 80%;
+    font-family: 'Rosario', sans-serif;
+    font-size: 20px;
+    margin-left: 2%;
 }
 .link-card {
     margin-top: 5%;
@@ -137,5 +144,4 @@ main {
 .link-footer {
     display: inline-block;
     margin-left: 9%;
-}
 }
